fix indicator text alignment

--- a/src/components/Indicator/Indicator.css
+++ b/src/components/Indicator/Indicator.css
@@ -10,7 +10,6 @@
 }
 
 .indicator-name {
-    padding-top: 5px;
     font-size: 22px;
     font-family: 'Lato';
     font-weight: 300;
